assets/styles/style.css
:root {
  --primary-font: "Inter", sans-serif;
  --secondary-font: "Macondo", "cursive";
  --primary-color: #3a2620 /*dark brown */;
  --secondary-color: #aa9581;
  --highlight-color: #415a82;
  --light-hightlight-color: #7a9fc2;
}

/* Gobal styles */
body {
  font-family: var(--primary-font);
}

h1,
h2,
h3 {
  color: var(--primary-color);
  font-family: var(--secondary-font);
}

h1,
h2 {
  text-transform: uppercase;
}

h2 {
  margin-bottom: 2rem;
}

.sub-heading-color {
  color: var(--highlight-color);
}

.section {
  margin-top: 2rem;
  margin-bottom: 2rem;
}

/* buttons */

.custom-button-filled {
  border: var(--highlight-color);
  background-color: var(--highlight-color);
  color: white;
}

.custom-button-filled:hover {
  border: var(--secondary-color);
  background-color: var(--secondary-color);
  color: white;
}

.custom-button-outline {
  border: 3px solid var(--highlight-color);
  padding: 7px 25px;
  background-color: white;
  color: var(--highlight-color);
}

.custom-button-outline:hover {
  border: 3px solid var(--highlight-color);
  background-color: var(--highlight-color);
  color: white;
}

/* Navbar css */

#navbar {
  background-color: var(--primary-color);
}

#navbar .logo {
  width: 30px;
}

/* header */

#header .id {
  font-family: var(--secondary-font);
}

/* services */

#services .card-footer {
  font-weight: bold;
  color: var(--highlight-color);
  background-color: transparent;
}

#services .card {
  margin-bottom: 1.5rem;
}

/* games */

#new-games .card,
#fav-games .card {
  border: none;
}

/* events */

#events th:hover,
#events td:hover {
  background-color: var(--highlight-color);
  color: white;
}

/* footer/contact */

#contact {
  background-color: var(--primary-color);
  color: white;
  padding-bottom: 3rem;
}

#contact h2 {
  color: white;
}

#contact .sub-heading-color {
  color: var(--light-hightlight-color);
}

#contact i {
  color: var(--secondary-color);
  font-size: 1.2rem;
  margin-right: 15px;
}

#contact .social-links i {
  color: var(--light-hightlight-color);
  font-size: 1.9rem;
  transition: color 0.3s ease-in-out;
}

#contact .social-links i:hover {
  color: var(--secondary-color);
}

#contact .table-dark * {
  background-color: transparent;
}

/* media quries */

/* medium devices (tablets, 768px and up) */

@media screen and (min-width: 768px) {
  /* makes all the cards the same height */
  #services .card-body {
    min-height: 191px;
  }
  #games .card-body {
    min-height: 232px;
  }
}

/* large devices 992px */
@media screen and (min-width: 992px) {
  /* makes all the cards the same height */
  #services .card-body {
    min-height: auto;
  }
}

/* extra large devices 1200px */
@media screen and (min-width: 1200px) {
  /* makes all the cards the same height */
  #services .card-body {
    min-height: 220px;
  }
}

/* extra extra large devices 1400px */
@media screen and (min-width: 1400px) {
  /* makes all the cards the same height */
  #services .card-body {
    min-height: 195px;
  }
}

